# android-local-vpn

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
.fleet/: run.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ppaass/agent/: AndroidLocalVpnApp.kt
app/src/main/java/com/ppaass/agent/ui/main/: ControlTab.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/ppaass/agent/ui/theme/: Shape.kt  Type.kt
app/src/main/java/com/ppaass/agent/vpn/: LocalVpnConfiguration.kt  LocalVpnService.kt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: .rustfmt.toml  Cargo.toml
rust/src/: buffers.rs  config.rs  device.rs  error.rs  lib.rs  local.rs  processor.rs  remote.rs  repository.rs  server.rs  session.rs  session_info.rs  transportation.rs  types.rs  util.rs  values.rs
rust/src/endpoint/: client.rs  mod.rs
rust/src/transport/: client.rs  common.rs  mod.rs  remote.rs  tcp.rs  udp.rs  value.rs
rust/src/transport/client/: common.rs  mod.rs  tcp.rs  udp.rs
rust/src/transport/remote/: common.rs  mod.rs  tcp.rs  udp.rs
rust/src/transportation/: buffers.rs  common.rs  mod.rs  value.rs
rust/src/transportation/endpoint/: device.rs  local.rs  mod.rs  remote.rs
rust/src/vpn/: buffers.rs  device.rs  processor.rs  session_info.rs
source/android/: build.gradle
source/android/app/: build.gradle
source/android/app/src/main/: AndroidManifest.xml
source/android/app/src/main/java/com/ppaass/agent/: AndroidLocalVpnApp.kt
source/android/rust/: Cargo.toml
source/android/rust/src/: lib.rs
source/android/rust/src/core/: mod.rs
source/android/rust/src/core/vpn/: mio_socket.rs  mod.rs  processor.rs  session.rs  session_info.rs  utils.rs  vpn_device.rs
source/android/rust/src/jni/: mod.rs
source/android/rust/src/socket_protector/: mod.rs
source/android/rust/src/vpn/: mio_socket.rs  mod.rs  processor.rs  session.rs  smoltcp_socket.rs  utils.rs  vpn_device.rs
source/android/vpn/: build.gradle
source/android/vpn/src/main/rust/vpn/: Cargo.toml
source/android/vpn/src/main/rust/vpn/.cargo/: config
source/android/vpn/src/main/rust/vpn/src/: lib.rs
source/android/vpn/src/main/rust/vpn/src/core/: mod.rs
source/android/vpn/src/main/rust/vpn/src/core/vpn/: buffers.rs  mio_socket.rs  smoltcp_socket.rs
source/android/vpn/src/main/rust/vpn/src/jni/: jni_context.rs  mod.rs
source/android/vpn/src/main/rust/vpn/src/socket_protector/: mod.rs
(+10 files in other folders)
