[package]
edition = "2021"
name = "vpn"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.13.1"
jni = "0.21.1"
lazy_static = "1.4.0"
libc = "0.2.138"
log = "0.4.17"
mio = {version = "0.8.6", features = ["os-poll", "net", "os-ext"]}
smoltcp = "0.9.1"
socket2 = "0.5.3"
rand="0.8.5"
anyhow="1.0.71"
pretty-hex="0.3.0"
thiserror="1.0.40"
derive_more="0.99.17"