[package]
edition = "2021"
name = "ppaass-agent-android"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.13.1"
jni = "0.21.1"
lazy_static = "1.4.0"
libc = "0.2.138"
log = "0.4.17"
smoltcp = {version = "0.10.0", features = ["packetmeta-id"]}
socket2 = "0.5.3"
rand="0.8.5"
anyhow="1.0.71"
pretty-hex="0.3.0"
thiserror="1.0.40"
derive_more="0.99.17"
tokio = { version = "1.28.1", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs", "sync"]}
tokio-util = "0.7"
ppaass-common = {path = "D:/Workspace/Git/ppaass-main/common"}
futures-util = {version = "0.3.28", features = ["std"]}