[package]
edition = "2021"
name = "vpn"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.13.1"
crossbeam = "0.8.2"
jni = "0.21.1"
lazy_static = "1.4.0"
libc = "0.2.138"
log = "0.4.17"
mio = {version = "0.8.8", features = ["os-poll", "net", "os-ext"]}
smoltcp = "0.9.1"
socket2 = "0.5.3"
rand="0.8.5"
anyhow="1.0.71"
once_cell = "1.17"
pretty-hex="0.3.0"