[package]
edition = "2021"
name = "vpn"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.13.1"
crossbeam = "0.8.2"
jni = {version = "0.21.1", default-features = false}
lazy_static = "1.4.0"
libc = "0.2.138"
log = "0.4.17"
mio = {version = "0.8.5", features = ["os-poll", "net", "os-ext"]}
smoltcp = "0.8.2"
socket2 = "0.5.3"
